--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,79 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/annotations-3.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/antlr-runtime-3.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/asm-all-5.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/bridj-0.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/collections-generic-4.01.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/colt-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/concurrent-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/core-1.54.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/de.huxhorn.sulky.3rdparty.jlayer-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/dx-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/filters-2.0.235-1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/h2-1.3.171.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applib-bdi-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-bdi-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-bdiv3-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-bpmn-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-java8-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-micro-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-applications-mixed-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-bridge-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-commons-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-commons-gui-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-commons-security-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-integration-test-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-javaparser-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-json-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-application-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-base-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-bdiv3-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-bpmn-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-component-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-extension-agr-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-extension-envsupport-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-extension-envsupport-opengl-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-kernel-micro-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-model-bpmn-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-platform-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-platform-standalone-launch-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-rules-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-rules-applications-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-rules-eca-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-rules-tools-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-runtimetools-swing-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-base-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-base-swing-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-bdi-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-benchmarks-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-bpmn-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-tools-comanalyzer-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jadex-xml-3.0.43.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jcalendar-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jcodec-0.1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jcommon-1.0.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jfreechart-1.0.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jna-4.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jna-platform-4.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jogl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jung-algorithms-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jung-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jung-graph-impl-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/jung-visualization-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/mail-1.4.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/minimal-json-0.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/prov-1.54.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/smack-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/smackx-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/stringtemplate-3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe-PC/git/AIAD/lib/webcam-capture-0.3.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
