Some changes to git ignore and CompanyBDI já recebe argumentos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 /DESKTOP-19NST8S.settings.xml
 .classpath
 .project
+/DESKTOP-13JBN3K.settings.xml
+/jcc.settings.xml
+/bpmn_editor.bat
+/default.settings.xml
+/dúvidas.txt
+/howtostart.txt
+/jadex_no_awareness.bat
+/jadex_nogui.bat
+/jadex.bat
+/license.txt
